--- a/src/v20.html
+++ b/src/v20.html
@@ -766,7 +766,7 @@
             <div class="dots">
               <select name="background" class="dropdown-custom text-textPrimary">
                 <!-- Do not include [text-textPrimary in shared class!] -->
-                <option value="" disabled selected hidden>discipline</option>
+                <option value="" disabled selected hidden>background</option>
                 <!-- Background options will be added here -->
               </select>
               <div class="dot-group">
@@ -837,7 +837,7 @@
       </div>
 
       <!-- [Humanity/Path & Willpower] -->
-      <div>
+      <div class="flex flex-col gap-9">
 
         <div>
           <h3>humanity & path</h3>
@@ -846,8 +846,10 @@
           <!-- Path dropdown -->
           <div class="dots-wrapper">
             <div class="dots">
-              <select name="background" class="dropdown-custom text-textPrimary w-full">
-                <!-- Backgrounds options will be added here -->
+              <select name="path" class="dropdown-custom text-textPrimary">
+                <!-- Do not include [text-textPrimary in shared class!] -->
+                <option value="" disabled selected hidden>path</option>
+                <!-- Path options will be added here -->
               </select>
               <div class="dot-group">
                 <span class="dot"></span>
