[feat/fix]: Add Willpower dots; Fix correct dots for Humanity/Willpower
This commit includes:
- Adding a 'dots' element to Willpower
- Corrected Humanity section (and for Willpower as well)
 - changed from 5 dots to 10 dots

--- a/src/v20.html
+++ b/src/v20.html
@@ -833,7 +833,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-          </div>
+        </div>
       </div>
 
       <!-- [Humanity/Path & Willpower] -->
@@ -857,6 +857,11 @@
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
               </div>
             </div>
           </div>
@@ -866,7 +871,23 @@
 
         <div>
           <h3>willpower</h3>
-
+          
+          <div class="dots-wrapper">
+            <div class="dots">
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
 
         </div>
 
