--- a/src/v20.html
+++ b/src/v20.html
@@ -896,7 +896,7 @@
     </section>
 
     <!-- [Merits + Flaws] -->
-    <section class="flex flex-col justify-center gap-9">
+    <section class="flex flex-col justify-center gap-9 gap-9 sm:grid sm:grid-cols-2">
 
       <!-- [Merits] -->
       <div>
