[feat]: linked paths.json to Paths dropdown
This commit includes:
- the js script for linking paths.json to the Paths dropdown

--- a/src/v20.html
+++ b/src/v20.html
@@ -846,7 +846,7 @@
           <!-- Path dropdown -->
           <div class="dots-wrapper">
             <div class="dots">
-              <select name="path" class="dropdown-custom text-textPrimary">
+              <select name="paths" class="dropdown-custom text-textPrimary">
                 <!-- Do not include [text-textPrimary in shared class!] -->
                 <option value="" disabled selected hidden>path</option>
                 <!-- Path options will be added here -->
