moved index.html to root

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <title>ShreckNet Lite - VtM Character Sheet</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="/dist/style.css">
+  <link rel="stylesheet" href="dist/style.css">
 </head>
 
 <body class="body">
@@ -65,10 +65,10 @@
     <div class="w-max flex flex-col justify-center items-center gap-5">
       <!-- Buttons -->
       <div class="flex flex-col text-center font-body text-textPrimary space-y-2 lg:text-lg">
-        <a href="v20.html" class="btn group">
+        <a href="src/v20.html" class="btn group">
           create a <span class="span">V20</span> character sheet
         </a>
-        <a href="v5.html" class="btn group">
+        <a href="src/v5.html" class="btn group">
           create a <span class="span">V5</span> character sheet
         </a>
       </div>
