--- a/src/v20.html
+++ b/src/v20.html
@@ -33,7 +33,7 @@
   <!-- Meta tags for character set and viewport -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ShreckNet Lite - V20 Character Sheet</title>
+  <title>SchreckNet Lite - V20 Character Sheet</title>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/src/css/style.css">
