--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Meta tags for character set and viewport -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ShreckNet Lite - VtM Character Sheet</title>
+  <title>SchreckNet Lite - VtM Character Sheet</title>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="dist/style.css">
