--- a/src/v20.html
+++ b/src/v20.html
@@ -36,8 +36,7 @@
   <title>SchreckNet Lite - V20 Character Sheet</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="/src/css/style.css">
-  <link rel="stylesheet" href="/dist/style.css">
+  <link rel="stylesheet" href="../dist/style.css">
 </head>
 
 <body class="body">
