--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <div class="w-max flex flex-col justify-center items-center gap-5">
       <!-- Buttons -->
       <div class="flex flex-col text-center font-body text-textPrimary space-y-2 lg:text-lg">
-        <a href="src/v20.html" class="btn group">
+        <a href="v20.html" class="btn group">
           create a <span class="span">V20</span> character sheet
         </a>
-        <a href="src/v5.html" class="btn group">
+        <a href="v5.html" class="btn group">
           create a <span class="span">V5</span> character sheet
         </a>
       </div>
