Fix Tailwind CSS loading with Vite configuration

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,7 @@
 <!--
 
 ================================================
-
-██╗  ██╗ ██████╗ ███╗   ███╗███████╗██████╗  █████╗  ██████╗ ███████╗
-██║  ██║██╔═══██╗████╗ ████║██╔════╝██╔══██╗██╔══██╗██╔════╝ ██╔════╝
-███████║██║   ██║██╔████╔██║█████╗  ██████╔╝███████║██║  ███╗█████╗  
-██╔══██║██║   ██║██║╚██╔╝██║██╔══╝  ██╔═══╝ ██╔══██║██║   ██║██╔══╝  
-██║  ██║╚██████╔╝██║ ╚═╝ ██║███████╗██║     ██║  ██║╚██████╔╝███████╗
-╚═╝  ╚═╝ ╚═════╝ ╚═╝     ╚═╝╚══════╝╚═╝     ╚═╝  ╚═╝ ╚═════╝ ╚══════╝
-
+Homepage
 ================================================
 
 + The first page you see
@@ -26,7 +19,7 @@
   <title>SchreckNet Lite - VtM Character Sheet</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="dist/style.css">
+  <link rel="stylesheet" href="/css/app.css">
 </head>
 
 <body class="body">
@@ -78,7 +71,7 @@
   </div>
 
   <!-- Javascript -->
-  <script src="src/js/script.js"></script>
+  <script type="module" src="/js/app.js"></script>
 
 </body>
 
