--- a/src/v20.html
+++ b/src/v20.html
@@ -1,14 +1,7 @@
 <!--
 
 ================================================
-
-██╗   ██╗██████╗  ██████╗ 
-██║   ██║╚════██╗██╔═████╗
-██║   ██║ █████╔╝██║██╔██║
-╚██╗ ██╔╝██╔═══╝ ████╔╝██║
- ╚████╔╝ ███████╗╚██████╔╝
-  ╚═══╝  ╚══════╝ ╚═════╝ 
-
+V20 Character sheet
 ================================================
 
 # Contains:
@@ -36,7 +29,7 @@
   <title>SchreckNet Lite - V20 Character Sheet</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="dist/style.css">
+  <link rel="stylesheet" href="/css/app.css">
 </head>
 
 <body class="body">
@@ -964,7 +957,7 @@
   </div>
 
   <!-- Javascript -->
-  <script src="js/script.js"></script>
+  <script type="module" src="/js/app.js"></script>
 
 </body>
 
