--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Homepage
   <title>SchreckNet Lite - VtM Character Sheet</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="./src/css/app.css">
 </head>
 
 <body class="body">
@@ -71,7 +71,7 @@ Homepage
   </div>
 
   <!-- Javascript -->
-  <script type="module" src="/js/app.js"></script>
+  <script type="module" src="./src/js/app.js"></script>
 
 </body>
 
