--- a/v20.html
+++ b/v20.html
@@ -29,7 +29,7 @@ V20 Character sheet
   <title>SchreckNet Lite - V20 Character Sheet</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="./src/css/app.css">
 </head>
 
 <body class="body">
@@ -957,7 +957,7 @@ V20 Character sheet
   </div>
 
   <!-- Javascript -->
-  <script type="module" src="/js/app.js"></script>
+  <script type="module" src="./src/js/app.js"></script>
 
 </body>
 
