style: add unique ids to Attributes and Abilities
This commit includes:
- adding ids to relevant sections for dot-handling:
 - Attributes: id="attributes-section"
 - Abilities: id="abilities-section"

--- a/v20.html
+++ b/v20.html
@@ -173,7 +173,7 @@ V20 Character sheet
     </section>
 
     <!-- [Attributes] -->
-    <section>
+    <section id="attributes-section">
 
       <h2>attributes</h2>
       <div class="grid gap-16 sm:grid-cols-3">
@@ -318,7 +318,7 @@ V20 Character sheet
     </section>
 
     <!-- [Abilities] -->
-    <section>
+    <section id="abilities-section">
 
       <h2>abilities</h2>
       <div class="grid gap-16 sm:grid-cols-3">
