fix: Modify populate functions to populate ALL dropdowns
This commit fixes the merit/flaw dropdowns not populating properly by modifying functions populateFlatDropdown and populateGroupedDropdown. These functions now populate ALL dropdowns with the given names.

Originally, only the first dropdown of Merits/Flaws were populating and any other dropdown succeeding it didn't have content.
Modifying both functions prevents all dropdowns from this issue.

--- a/v20.html
+++ b/v20.html
@@ -1008,7 +1008,7 @@ V20 Character sheet
 
           <!-- Merit dropdown(s) -->
           <div>
-            <select name="merit" class="dropdown-custom sm:w-3/4">
+            <select name="merit" class="dropdown-custom sm:w-3/4 lg:w-max">
                 <!-- Do not include [text-textPrimary in shared class!] -->
                 <option value="" disabled selected hidden>merit</option>
                 <!-- Merit options will be added here -->
@@ -1018,9 +1018,9 @@ V20 Character sheet
 
           <!-- New Merits here! -->
           <div>
-            <select name="merit" class="dropdown-custom sm:w/4">
+            <select name="merit" class="dropdown-custom sm:w-3/4 lg:w-max">
                 <!-- Do not include [text-textPrimary in shared class!] -->
-                <option value="" disabled selected hidden>flaw</option>
+                <option value="" disabled selected hidden>merit</option>
                 <!-- Flaw options will be added here -->
             </select>
             <button class="btn-minus">-</button>
@@ -1043,7 +1043,7 @@ V20 Character sheet
 
           <!-- Merit dropdown(s) -->
             <div>
-            <select name="flaw" class="dropdown-custom sm:w-3/4">
+            <select name="flaw" class="dropdown-custom sm:w-3/4 lg:w-max">
                 <!-- Do not include [text-textPrimary in shared class!] -->
                 <option value="" disabled selected hidden>flaw</option>
                 <!-- Flaw options will be added here -->
@@ -1054,7 +1054,7 @@ V20 Character sheet
           
           <!-- New flaws here! -->
           <div>
-            <select name="flaw" class="dropdown-custom sm:w/4">
+            <select name="flaw" class="dropdown-custom sm:w-3/4 lg:w-max">
                 <!-- Do not include [text-textPrimary in shared class!] -->
                 <option value="" disabled selected hidden>flaw</option>
                 <!-- Flaw options will be added here -->
