fix: fix Merit dropdowns not removing, and new dropdowns appearing below the add button
This commit changes the `id="merit-flaw-wrapper"` to `class="merit-flaw-wrapper"`. It was supposed to be a class, NOT id, OOPS!
For the layout issue, a line in the `addButton` eventListener inside `initializeDynamicRows` is changed from `rowContainer.appendChild(newRow);` to `rowContainer.insertBefore(newRow, addButton.parentElement);`.

Fixing the placeholder issue will be next!

--- a/v20.html
+++ b/v20.html
@@ -973,7 +973,7 @@ V20 Character sheet
         <div id="merits-container" class="flex flex-col items-center gap-3">
 
           <!-- Merit dropdown(s) -->
-          <div id="merit-flaw-wrapper">
+          <div class="merit-flaw-wrapper">
             <select name="merit" class="dropdown-custom sm:w-3/4 lg:w-max">
                 <!-- Do not include [text-textPrimary in shared class!] -->
                 <option value="" disabled selected hidden>merit</option>
@@ -983,14 +983,6 @@ V20 Character sheet
           </div>
 
           <!-- New Merits here! -->
-          <div id="merit-flaw-wrapper">
-            <select name="merit" class="dropdown-custom sm:w-3/4 lg:w-max">
-                <!-- Do not include [text-textPrimary in shared class!] -->
-                <option value="" disabled selected hidden>merit</option>
-                <!-- Flaw options will be added here -->
-            </select>
-            <button class="btn-minus">-</button>
-          </div>
 
           <!-- Button to add merit -->
           <div>
