fix: Add placeholder options to new dynamic dropdowns
The HTML templates used for generating new rows in the Disciplines, Backgrounds, Merits, and Flaws sections did not include the initial placeholder `<option>`.

This resulted in newly added dropdowns appearing blank, inconsistent with the initial dropdowns on the page.

This commit updates the `disciplineTemplate`, `backgroundTemplate`, `meritTemplate`, and `flawTemplate` constants in `app.js` to include the standard `value="" disabled selected hidden` placeholder option, ensuring a consistent user experience.

--- a/v20.html
+++ b/v20.html
@@ -972,27 +972,24 @@ V20 Character sheet
         <h3>merits</h3>
         <div id="merits-container" class="flex flex-col items-center gap-3">
 
-          <!-- Merit dropdown(s) -->
+          <!-- CHANGE "id" to "class" HERE -->
           <div class="merit-flaw-wrapper">
             <select name="merit" class="dropdown-custom sm:w-3/4 lg:w-max">
-                <!-- Do not include [text-textPrimary in shared class!] -->
-                <option value="" disabled selected hidden>merit</option>
-                <!-- Merit options will be added here -->
+              <option value="" disabled selected hidden>merit</option>
             </select>
             <button class="btn-minus">-</button>
           </div>
 
-          <!-- New Merits here! -->
+          <!-- ... other initial rows ... -->
 
-          <!-- Button to add merit -->
           <div>
             <button id="add-merit-btn" class="btn group text-xs">
               add new <span class="span">merit</span>
             </button>
           </div>
-
         </div>
       </div>
+
       <!-- [Flaws] -->
       <div>
         <h3>flaws</h3>
