style: Animate remove button on dynamic row hover
Improves the UX for dynamic rows (Disciplines/Backgrounds/Merits/Flaws) by changing how the remove button is displayed.
- The remove button (`.btn-minus`) is now hidden by default to create a cleaner and less cluttered UI.
- On hover of the element (`.group`), the button slides in and out of place from the right.

--- a/v20.html
+++ b/v20.html
@@ -724,44 +724,14 @@ V20 Character sheet
 
           <!-- Initial non-removalable Discipline dropdowns -->
           <div class="dots-wrapper">
-            <div class="dots">
-              <select name="discipline" class="dropdown-custom">
-              <!-- Do not include [text-textPrimary in shared class!] -->
-              <option value="" disabled selected hidden>discipline</option>
-              <!-- Discipline options will be added here -->
-              </select>
-              <div class="dot-group">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
+            <div class="dots-custom">
+              <div class="relative flex items-center justify-center group gap-2">
+                <select name="discipline" class="dropdown-custom">
+                <!-- Do not include [text-textPrimary in shared class!] -->
+                <option value="" disabled selected hidden>discipline</option>
+                  <!-- Discipline options will be added here -->
+                </select>
               </div>
-            </div>
-          </div>
-          <div class="dots-wrapper">
-            <div class="dots">
-              <select name="discipline" class="dropdown-custom">
-              <!-- Do not include [text-textPrimary in shared class!] -->
-              <option value="" disabled selected hidden>discipline</option>
-                <!-- Discipline options will be added here -->
-              </select>
-              <div class="dot-group">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-              </div>
-            </div>
-          </div>
-          <div class="dots-wrapper">
-            <div class="dots">
-              <select name="discipline" class="dropdown-custom">
-              <!-- Do not include [text-textPrimary in shared class!] -->
-              <option value="" disabled selected hidden>discipline</option>
-                <!-- Discipline options will be added here -->
-              </select>
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -798,44 +768,14 @@ V20 Character sheet
 
           <!-- Initial non-removalable Backgrounds dropdowns -->
           <div class="dots-wrapper">
-            <div class="dots">
-              <select name="background" class="dropdown-custom">
-                <!-- Do not include [text-textPrimary in shared class!] -->
-                <option value="" disabled selected hidden>background</option>
-                <!-- Backgrounds options will be added here -->
-              </select>
-              <div class="dot-group">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
+            <div class="dots-custom">
+              <div class="relative flex items-center justify-center group gap-2">
+                <select name="background" class="dropdown-custom">
+                  <!-- Do not include [text-textPrimary in shared class!] -->
+                  <option value="" disabled selected hidden>background</option>
+                  <!-- Backgrounds options will be added here -->
+                </select>
               </div>
-            </div>
-          </div>
-          <div class="dots-wrapper">
-            <div class="dots">
-              <select name="background" class="dropdown-custom">
-                <!-- Do not include [text-textPrimary in shared class!] -->
-                <option value="" disabled selected hidden>background</option>
-                <!-- Backgrounds options will be added here -->
-              </select>
-              <div class="dot-group">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-              </div>
-            </div>
-          </div>
-          <div class="dots-wrapper">
-            <div class="dots">
-              <select name="background" class="dropdown-custom">
-                <!-- Do not include [text-textPrimary in shared class!] -->
-                <option value="" disabled selected hidden>background</option>
-                <!-- Background options will be added here -->
-              </select>
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -973,8 +913,8 @@ V20 Character sheet
         <div id="merits-container" class="flex flex-col items-center gap-3">
 
           <!-- CHANGE "id" to "class" HERE -->
-          <div class="merit-flaw-wrapper">
-            <select name="merit" class="dropdown-custom sm:w-3/4 lg:w-max">
+          <div class="merit-flaw-wrapper relative flex items-center justify-center group gap-2">
+            <select name="merit" class="dropdown-custom">
               <option value="" disabled selected hidden>merit</option>
             </select>
             <button class="btn-minus">-</button>
@@ -997,11 +937,9 @@ V20 Character sheet
         <div id="flaws-container" class="flex flex-col items-center gap-3">
 
           <!-- Flaw dropdown(s) -->
-          <div class="merit-flaw-wrapper">
-            <select name="flaw" class="dropdown-custom sm:w-3/4 lg:w-max">
-                <!-- Do not include [text-textPrimary in shared class!] -->
+          <div class="merit-flaw-wrapper relative flex items-center justify-center group gap-2">
+            <select name="flaw" class="dropdown-custom">
                 <option value="" disabled selected hidden>flaw</option>
-                <!-- Flaw options will be added here -->
             </select>
             <button class="btn-minus">-</button>         
           </div>
