fix: Add space for `.btn-minus` to stop the Jiggle
The layout no longer moves or Jiggles when the Merit/Flaw dropdown 'remove button' appears when the screen size is `min-width:640px` or `sm`.

`.btn-minus` was modified so that space is preserved for it, and so the UI doesn't need to compensate for its sudden appearance. Additionally, only the opacity and the scale is animated, not the actual slide. So it just grows and shrinks instead of sliding out. Aw.
The new dropdowns are also centered with `ml-10`.

--- a/v20.html
+++ b/v20.html
@@ -913,7 +913,7 @@ V20 Character sheet
         <div id="merits-container" class="flex flex-col items-center gap-3">
 
           <!-- CHANGE "id" to "class" HERE -->
-          <div class="merit-flaw-wrapper relative flex items-center justify-center group gap-2">
+          <div class="merit-flaw-wrapper relative flex items-center justify-center group ml-10 gap-2">
             <select name="merit" class="dropdown-custom">
               <option value="" disabled selected hidden>merit</option>
             </select>
@@ -937,7 +937,7 @@ V20 Character sheet
         <div id="flaws-container" class="flex flex-col items-center gap-3">
 
           <!-- Flaw dropdown(s) -->
-          <div class="merit-flaw-wrapper relative flex items-center justify-center group gap-2">
+          <div class="merit-flaw-wrapper relative flex items-center justify-center group ml-10 gap-2">
             <select name="flaw" class="dropdown-custom">
                 <option value="" disabled selected hidden>flaw</option>
             </select>
