style: Re-Add all three intial dropdowns for Disciplines/Backgrounds

--- a/v20.html
+++ b/v20.html
@@ -741,6 +741,42 @@ V20 Character sheet
               </div>
             </div>
           </div>
+          <div class="dots-wrapper">
+            <div class="dots-custom">
+              <div class="relative flex items-center justify-center group gap-2">
+                <select name="discipline" class="dropdown-custom">
+                <!-- Do not include [text-textPrimary in shared class!] -->
+                <option value="" disabled selected hidden>discipline</option>
+                  <!-- Discipline options will be added here -->
+                </select>
+              </div>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
+          <div class="dots-wrapper">
+            <div class="dots-custom">
+              <div class="relative flex items-center justify-center group gap-2">
+                <select name="discipline" class="dropdown-custom">
+                <!-- Do not include [text-textPrimary in shared class!] -->
+                <option value="" disabled selected hidden>discipline</option>
+                  <!-- Discipline options will be added here -->
+                </select>
+              </div>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
 
           <!-- New, dynamically added disciplines will appear here -->
 
@@ -767,6 +803,42 @@ V20 Character sheet
         <div id="backgrounds-container" class="flex flex-col gap-3">
 
           <!-- Initial non-removalable Backgrounds dropdowns -->
+          <div class="dots-wrapper">
+            <div class="dots-custom">
+              <div class="relative flex items-center justify-center group gap-2">
+                <select name="background" class="dropdown-custom">
+                  <!-- Do not include [text-textPrimary in shared class!] -->
+                  <option value="" disabled selected hidden>background</option>
+                  <!-- Backgrounds options will be added here -->
+                </select>
+              </div>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
+          <div class="dots-wrapper">
+            <div class="dots-custom">
+              <div class="relative flex items-center justify-center group gap-2">
+                <select name="background" class="dropdown-custom">
+                  <!-- Do not include [text-textPrimary in shared class!] -->
+                  <option value="" disabled selected hidden>background</option>
+                  <!-- Backgrounds options will be added here -->
+                </select>
+              </div>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
           <div class="dots-wrapper">
             <div class="dots-custom">
               <div class="relative flex items-center justify-center group gap-2">
