feat: implement Disciplines/Backgrounds dot-handling
This commit adds point allocation functionality to the Disciplines and Backgrounds section.

A new function `initializeSimpleDotLogic` was created, for dot-handling with fixed points (i.e. Disciplines=3, Backgrounds=5, Virtues=7).
It should also have the same guards as the Attributes/Abilities dot-handling such as preventing users from going into debt, dynamic point counter, and point allocation only being available once a value is selected in the dropdown.

Dot-handling also works with the non-initial dropdowns.

--- a/v20.html
+++ b/v20.html
@@ -712,7 +712,7 @@ V20 Character sheet
 
       <!-- === BACKGROUNDS === -->
 
-      <div>
+      <div id="disciplines-section">
         <h3>disciplines <span>3</span></h3>
         <!-- 
         
@@ -792,7 +792,7 @@ V20 Character sheet
 
       <!-- === BACKGROUNDS === -->
 
-      <div>
+      <div id="backgrounds-section">
         <h3>backgrounds <span>5</span></h3>
         <!-- 
         
