fix: Resolve removed non-initial Discipline/Background dropdowns stealing points
Now, when a non-initial background is removed, any dots spent in that dropdown be refunded.

The function `initializeSimpleDotLogic` was modified. It now creates a `MutationObserver` which watches Discipline/Background dropdowns and runs its callback function `updateCounter()` when a change is made. It then just recounts all currently visible `.dot.filled` elements on the page and recalculates the correct number of remaining dots and corrects the counter.

--- a/v20.html
+++ b/v20.html
@@ -980,7 +980,7 @@ V20 Character sheet
     <section id="merits-flaws-section" class="flex flex-col justify-center gap-16 sm:grid sm:grid-cols-2">
 
       <!-- [Merits] -->
-      <div>
+      <div id="mertis-section">
         <h3>merits</h3>
         <div id="merits-container" class="flex flex-col items-center gap-3">
 
@@ -1003,7 +1003,7 @@ V20 Character sheet
       </div>
 
       <!-- [Flaws] -->
-      <div>
+      <div id="flaws-section">
         <h3>flaws</h3>
 
         <div id="flaws-container" class="flex flex-col items-center gap-3">
