feat: implement Virtues dot-handling
This commit primes and setups Virtues so that it can be graced with dot-handling.

Small modification to the `initializeSimpleDotLogic` function to accomodate for Virtues' free 1 dot in all of its categories.

--- a/v20.html
+++ b/v20.html
@@ -880,7 +880,7 @@ V20 Character sheet
       2 columns: Virtues (right), Humanity/Path/Willpower (left; stacked)
       
       -->
-      <div>
+      <div id="virtues-section">
         <h3>virtues <span>7</span></h3>
         <!-- Conscience, Self-Control, Courage -->
         <div class="dots-wrapper">
