--- a/v20.html
+++ b/v20.html
@@ -920,7 +920,7 @@ V20 Character sheet
       <!-- [Humanity/Path & Willpower] -->
       <div class="flex flex-col gap-9">
 
-        <div>
+        <div id="huamnity-section">
           <h3>humanity & path</h3>
         <div class="flex flex-col gap-3">
 
@@ -950,7 +950,7 @@ V20 Character sheet
 
         </div>
 
-        <div>
+        <div id="willpower-section">
           <h3>willpower</h3>
           
           <div class="dots-wrapper">
