--- a/v20.html
+++ b/v20.html
@@ -920,7 +920,7 @@ V20 Character sheet
       <!-- [Humanity/Path & Willpower] -->
       <div class="flex flex-col gap-9">
 
-        <div id="huamnity-section">
+        <div id="humanity-section">
           <h3>humanity & path</h3>
         <div class="flex flex-col gap-3">
 
