feat: Add 'humanity' as a path option
Just added an option in the Humanity dropdown option. Thought it was already included in `paths.json, but nope. Ooops.

Added now.

--- a/v20.html
+++ b/v20.html
@@ -930,6 +930,7 @@ V20 Character sheet
               <select name="paths" class="dropdown-custom mb-2">
                 <!-- Do not include [text-textPrimary in shared class!] -->
                 <option value="" disabled selected hidden>path</option>
+                <option value="humanity">humanity</option>
                 <!-- Path options will be added here -->
               </select>
               <div class="dot-group">
